--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         margin-left: 1000px;
     }
         /* .top{
-            background-image: url(../supriyaaa/6666666.jpeg);
+            background-image: url(supriyaaa/6666666.jpeg);
             height: 100vh;
             background-size: cover;
         } */
@@ -112,13 +112,13 @@
 <body>
     <div class="top">
     <input type="radio">click here
-    <!-- <img src="../supriyaaa/55555555.jpg"> -->
-    <img src="../supriyaaa/umpire-showing-four-run-signal-2775406-2319175.png" height="100" width="100" class="c">
-    <img src="../supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif" height="100" width="100" class="c1">
-    <img src="../supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif"  height="100" width="100" class="c2">
-    <img src="../supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif" height="100" width="100" class="c3"> 
-    <img src="../supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif" height="100" width="100" class="c4">
-    <img src="../supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif" height="100" width="100" class="c5">
+    <!-- <img src="supriyaaa/55555555.jpg"> -->
+    <img src="supriyaaa/umpire-showing-four-run-signal-2775406-2319175.png" height="100" width="100" class="c">
+    <img src="supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif" height="100" width="100" class="c1">
+    <img src="supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif"  height="100" width="100" class="c2">
+    <img src="supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif" height="100" width="100" class="c3"> 
+    <img src="supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif" height="100" width="100" class="c4">
+    <img src="supriyaaa/d8qo6p6-bd21ae63-82e2-472c-a420-f3339ff330f0.gif" height="100" width="100" class="c5">
 </div>
 </body>
 </html>
